<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1_log_in_to_pg_amp_e"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_the_pg_amp_e_website_pge_com_and_log_in_to_your_account"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/step1"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/pg_amp_e_login_screen"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2_navigate_to_energy_usage"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_energy_usage_details_under_usage_rates_amp_savings"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/step2"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/pg_amp_e_usage_section"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_3_find_download_my_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_down_and_find_the_green_button_called_download_my_data"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/step3"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/download_my_data_button"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_4_select_date_range_amp_export"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_export_usage_for_a_range_of_days_then_choose_a_desired_time_period_max_is_1_year_period_choose_the_csv_format_and_click_export_this_downloads_a_zip_file"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/step4"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/export_options"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_5_upload_the_zip_file_here"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/come_back_to_this_app_and_tap_the_upload_pg_amp_e_zip_data_button_select_the_zip_file_you_just_downloaded_from_pg_amp_e"
            android:layout_marginBottom="16dp"/>


        <Button
            android:id="@+id/button_close_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/close"/>

    </LinearLayout>
</ScrollView>