<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C67E4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="386dp"
        android:layout_height="859dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/password_register"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/prompt_password"
            android:backgroundTint="#A6A6A6"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/password_register2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_register" />

        <EditText
            android:id="@+id/password_register2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/confirm_password"
            android:backgroundTint="#A6A6A6"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/register_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register" />

        <EditText
            android:id="@+id/username_register"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/prompt_email"
            android:backgroundTint="#A6A6A6"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/register_action"
            android:layout_width="358dp"
            android:layout_height="51dp"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:background="#8B66E2"
            android:enabled="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/register_title"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="231dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="#090909"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/username_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="529dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_action">

            <TextView
                android:id="@+id/register_extra_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/register_extra_text_2"
                android:textAlignment="center" />

            <Button
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:fontFamily="@font/montserrat"
                android:text="@string/login_here"
                android:textColor="#AB23869E"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>